--- a/Themes/BasicBackground/BasicBackground.theme.css
+++ b/Themes/BasicBackground/BasicBackground.theme.css
@@ -27,7 +27,7 @@
 	--font:							Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;		/* font used in most places														*/
 	--textshadow:					transparent;				/* default: transparent			(textshadow for text ontop of accentcolor nodes, ONLY accepts a color, no px)	*/
 	
-	--background:					url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/background.jpg);	/* general background image						*/
+	--background:					url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fwallpaper&psig=AOvVaw0fPHHxpHdF9wP5igKMf1oi&ust=1608726333038000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPCtmuHK4e0CFQAAAAAdAAAAABAD);	/* general background image						*/
 	--backgroundposition:			center;						/* default: center				(position of background - values: [center/top/right/bottom/left])				*/
 	--backgroundsize:				cover;						/* default: cover				(sizefit of background - values: [cover/contain/auto])							*/
 	--backgroundblur:				unset;						/* default: unset				(blur in px, only works when --background is set to an image)							*/
